# qvd-client-qt

./: .gitignore  README.md  make_tar  qvd-client-qt_4.3.orig.tar.xz
installer/: README.md  build.ps1  build.sh  importcert.ps1  makecert.ps1
installer/config/: config.xml  config.xml.in
installer/install_scripts/: auto_uninstall.qs
packaging/: build_on_centos8  build_on_raspberry  build_on_rocky9  build_on_sles12sp2  build_on_sles15sp2  build_on_sles15sp4  build_on_ubuntu18.04  build_on_ubuntu20.04  build_on_ubuntu21.04  build_on_ubuntu22.04
packaging/docker/centos-8/: Dockerfile  build
packaging/docker/centos-8/nx-libs/: Dockerfile  build.sh  qvd-pub.gpg
packaging/docker/rocky-9/: Dockerfile  build
packaging/docker/rocky-9/nx-libs/: Dockerfile  build.sh  nx-libs.spec
packaging/docker/sles-12sp2/: Dockerfile
packaging/docker/sles-12sp2/nx-libs/: Dockerfile  build.sh
packaging/docker/sles-12sp2/nx-libs/files/: nx-libs.spec
packaging/docker/sles-15sp2/: Dockerfile  build
packaging/docker/sles-15sp2/nx-libs/: Dockerfile  build.sh
packaging/docker/sles-15sp4/: Dockerfile  build
packaging/docker/sles-15sp4/nx-libs/: Dockerfile  build.sh
packaging/docker/ubuntu-18.04/: Dockerfile  build
packaging/docker/ubuntu-20.04/: Dockerfile  build
packaging/docker/ubuntu-21.04/: Dockerfile  build
packaging/docker/ubuntu-21.04/scripts/: build
packaging/docker/ubuntu-22.04/: Dockerfile  build
packaging/docker/ubuntu-22.04/scripts/: build
packaging/files/deb/: build
packaging/files/deb/debian/: control  debhelper-build-stamp  manpage.sgml.ex  manpage.xml.ex  prerm.ex  qvd-client-qt.cron.d.ex  qvd-client.desktop  qvd-client.menu  rules
packaging/files/deb_u18.04/: build
packaging/files/deb_u18.04/debian/: README.Debian  README.source  changelog  copyright  manpage.1.ex  postinst.ex  postrm.ex  preinst.ex  qvd-client-qt.doc-base.EX  qvd-client-qt.install  rules
packaging/files/rpm/: build_nx  libqt5-qtcharts.spec  nx-libs-FreeFontNames.patch  nx-libs.spec  qvd-client.spec  qvd-secret.gpg  stfu-and-sign.exp
qtclient/: CMakeLists.txt  Makefile  QVD_Client.pro
qtclient/gui/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Info.plist  Makefile  cmake_install.cmake  com.theqvd.client.desktop  commandlineparser.cpp  commandlineparser.h  configloader.cpp  configloader.h  connectionstatistics.cpp  connectionstatistics.h  connectionstatistics.ui  connectionstatisticschart.cpp  connectionstatisticschart.h  gui.pro  gui.pro.old  icon.rc  images.qrc  keyboarddetector.cpp  keyboarddetector.h  listdialog.cpp  listdialog.h  listdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  movingaverage.cpp  movingaverage.h  qvdchecklistview.cpp  qvdclient.qdocconf  sslerrordialog.cpp  sslerrordialog.h  sslerrordialog.ui  totpenrollment.cpp  totpenrollment.h  totpenrollment.ui  (+6 more)
qtclient/gui/config/: config.xml
qtclient/gui/i18n/: QVD_Client_en_US.ts  QVD_Client_es_ES.ts  QVD_Client_es_MX.ts  README.md  update_translations.sh
qtclient/gui/keyboard_detector/: keyboarddetector_linux.cpp  keyboarddetector_osx.cpp  keyboarddetector_windows.cpp
qtclient/gui/pixmaps/: qvd.icns
qtclient/libqvdclient/: CMakeLists.txt  Doxyfile  default.pa  libqvdclient.pro  libqvdclient.pro.old  nxerrorcommanddata.cpp  nxerrorcommanddata.h  qvdchecklistview.cpp  qvdchecklistview.h  qvdclient.cpp  qvdclient.h  qvdclient_global.h  qvdconnectionparameters.cpp  qvdconnectionparameters.h  qvdhttp.cpp  qvdhttpserver.h  qvdnetworkreply.cpp  socketforwarder.cpp  socketforwarder.h  version.rc.in
qtclient/libqvdclient/backends/: qvdbackend.cpp  qvdbackend.h  qvdlibnxbackend.cpp  qvdnxbackend.cpp  qvdnxbackend.h  xserverlauncher.cpp  xserverlauncher.h  xserverlauncher_osx.cpp  xserverlauncher_windows.cpp
qtclient/libqvdclient/helpers/: binaryfinder.cpp  binaryfinder.h  keyboarddetector.cpp  keyboarddetector.h  linebuffer.h  pathtools.cpp  pathtools.h  portallocator.cpp  portallocator.h  qvdfilehelpers.cpp
qtclient/libqvdclient/pulseaudio/: pulseaudio.cpp  pulseaudio.h  pulseaudio_win.cpp
qtclient/libqvdclient/slaveclient/: qvdslaveclient.cpp  qvdslaveclient.h
qtclient/libqvdclient/slaveclient/commands/: connectaudio.cpp  connectaudio.h  qvdslavecommand.cpp  qvdslavecommand.h  shareusbdevice.cpp  shareusbdevice.h  slavesharefolderwithvm.cpp  slavesharefolderwithvm.h  slavesharefolderwithvm_win.cpp
qtclient/libqvdclient/tests/: tst_keyboard_detector.cpp  tst_linebuffer.cpp  tst_pathtools.cpp  tst_pulseaudio.cpp  tst_usbip.cpp  tst_usbip.h
qtclient/libqvdclient/usbip/: qvdusbip.cpp  qvdusbip.h  usbdatabase.cpp  usbdatabase.h  usbdevice.cpp  usbdevice.h  usbdevicelist.cpp  usbdevicelist.h  usbip.cpp  usbip.h
qtclient/qvdclient/: certs.json  qvdchecklistview.cpp  qvdclient.cpp  qvdclient.h  qvdclient.pro  qvdconnectionparameters.cpp  qvdconnectionparameters.h  qvdhttp.h  qvdhttpserver.cpp  qvdnetworkaccessmanager.cpp  qvdnetworkaccessmanager.h  qvdnetworkreply.cpp  qvdnetworkreply.h  socketforwarder.cpp  socketforwarder.h
qtclient/qvdclient-test/: link_qvdclient.pri  qvdclient-test.pro
qtclient/qvdclient-test/linebuffer/: linebuffer.pro  tst_linebuffer.cpp
qtclient/qvdclient-test/pulseaudio/: pulseaudio.pro
qtclient/qvdclient/backends/: qvdbackend.cpp  qvdbackend.h  qvdlibnxbackend.h  qvdnxbackend.cpp  qvdnxbackend.h  xserverlauncher_osx.cpp
qtclient/qvdclient/helpers/: linebuffer.cpp  qvdfilehelpers.h
qtclient/qvdclient/pulseaudio/: pulseaudio.cpp  pulseaudio.h
qtclient/qvdclient/slaveclient/: qvdslaveclient.cpp  qvdslaveclient.h
qtclient/qvdclient/slaveclient/commands/: qvdslavecommand.cpp  qvdslavecommand.h  shareusbdevice.cpp  shareusbdevice.h  slavesharefolderwithvm.cpp  slavesharefolderwithvm.h
qtclient/qvdclient/usbip/: usbdevice.h
qtclient/qvdclient/util/: qvdsysteminfo.cpp  qvdsysteminfo.h  qvdsysteminfo_linux.cpp  qvdsysteminfo_linux.h  qvdsysteminfo_windows.cpp  qvdsysteminfo_windows.h
qtclient/slaveserver/: CMakeLists.txt  main.cpp  socketforwarder.cpp  socketforwarder.h
(+3 files in other folders)
